# whale-alert

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
core/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_multichain_ai.py  0003_chainscanstate.py
monitor/: apps.py  tasks.py
static/css/: dashboard.css
static/js/: dashboard.js
static/js/modules/: main.js  report-panel.js  stats-panel.js  store.js  transactions-table.js  ws.js
templates/: base.html
templates/core/: dashboard.html
tests/: conftest.py  test_consumers.py  test_models.py  test_tasks.py  test_views.py
whale_alert/: asgi.py  celery.py  settings.py
